Jvm GC test.